--- a/src/NavBar/ConnectLinks.css
+++ b/src/NavBar/ConnectLinks.css
@@ -1,12 +1,13 @@
-.NavBar_top {
+.ConnectLinks {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 @media screen and (min-width: 900px) {
-    .NavBar_top {
+    .ConnectLinks {
         max-width: 944px;
+        justify-content: space-between;
         margin: 0 auto;
     }
 }
